# neurolink

./: .env.example  .eslintrc.cjs  .gitignore  README.md  capacitor.config.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: App.tsx  index.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/canvas/: CanvasPage.tsx  IdeaDetailModal.tsx
src/components/editor/: NoteEditor.tsx  NoteView.tsx
src/components/layout/: AppLayout.tsx  BottomNav.tsx  IdeasListPage.tsx  SettingsPage.tsx  Sidebar.tsx  TopBar.tsx
src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Input.tsx  Modal.tsx  index.ts
src/db/: client.ts  memory-db.ts  schema.sql  tauri-db.ts
src/hooks/: useGraph.ts
src/lib/: graph-utils.ts
src/services/: auth-callback.tsx  drive-sync.ts
src/store/: graphStore.ts  noteStore.ts  uiStore.ts
src/types/: index.ts  platform.d.ts
