[package]
name = "neurolink"
version = "0.1.0"
description = "Ideensammler mit neurologischer Verknüpfung"
authors = ["NeuroLink"]
edition = "2021"

[lib]
name = "neurolink_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
